= Changelog

This document provides a high-level view of the changes to the macOS Security Compliance Project.

== [Monterey, Revision 3.1] - 2022-12-06

* Rules
** Modified Rules
*** os_dvdram_disable
*** os_hibernate_mode_enable
*** os_tftpd_disable
*** sysprefs_automatic_logout_enforce
*** sysprefs_time_server_configure
** Bug fixes

* Baselines
** Updated all baselines

* Scripts
** generate_guidance
*** Added custom references to compliance check script
*** Bug Fixes
** generate_baseline
*** Added author function
*** Bug Fixes


== [Monterey, Revision 3] - 2022-10-20

* Rules
** Modified Rules
*** os_ssh_fips_compliant
*** os_ssh_server_alive_count_max_configure
*** os_ssh_server_alive_interval_configure
*** os_sshd_client_alive_count_max_configure
*** os_sshd_client_alive_interval_configure
*** os_sshd_fips_140_ciphers
*** os_sshd_fips_140_macs
*** os_sshd_fips_compliant
*** os_sshd_key_exchange_algorithm_configure
*** os_sshd_login_grace_time_configure
*** os_sshd_permit_root_login_configure
*** os_sudo_timeout_configure
*** os_sudoers_timestamp_type_configure
*** pwpolicy_account_inactivity_enforce.yaml
*** pwpolicy_account_lockout_enforce.yaml
*** pwpolicy_account_lockout_timeout_enforce.yaml
*** pwpolicy_alpha_numeric_enforce.yaml
*** pwpolicy_history_enforce.yaml
*** pwpolicy_lower_case_character_enforce.yaml
*** pwpolicy_max_lifetime_enforce.yaml
*** pwpolicy_minimum_length_enforce.yaml
*** pwpolicy_minimum_lifetime_enforce.yaml
*** pwpolicy_simple_sequence_disable.yaml
*** pwpolicy_special_character_enforce.yaml
*** pwpolicy_upper_case_character_enforce.yaml
** Deleted Rules
*** os_sudoers_tty_configure

* Baselines
** Modified existing baselines
** Added parent_values

* Scripts
** generate_guidance
*** Added ODV support
*** Added Ruby gem generation
*** Added support for fix/check in compliance script
*** Added unified log support to compliance script
*** Bug Fixes
** generate_baseline
*** Added ODV support
*** Added tailoring support
*** Bug Fixes