@@ -1,4 +1,4 @@
 os: "12.0"
 version: "Monterey Guidance, Revision 3.1"
 cpe: o:apple:macos:12.0
-date: "2022-12-06"
+date: "2022-12-07"
