@@ -1,6 +1,6 @@
 title: "macOS 12.0: Security Configuration - DISA STIG"
 description: |
-  This guide describes the actions to take when securing a macOS system against the Apple macOS 12 (Monterey) STIG - Ver 1, Rel 1.
+  This guide describes the actions to take when securing a macOS system against the Apple macOS 12 (Monterey) STIG - Ver 1, Rel 4.
 authors: |
   |===
   |Dan Brodjieski|National Aeronautics and Space Administration
