@@ -8,6 +8,13 @@ This document provides a high-level view of the changes to the macOS Security Co
 ** Modified Rules
 *** os_dvdram_disable
 *** os_hibernate_mode_enable
+*** os_sshd_client_alive_count_max_configure
+*** os_sshd_client_alive_interval_configure
+*** os_sshd_fips_140_ciphers
+*** os_sshd_fips_140_macs
+*** os_sshd_key_exchange_algorithm_configure
+*** os_sshd_login_grace_time_configure
+*** os_sshd_permit_root_login_configure
 *** os_tftpd_disable
 *** sysprefs_automatic_logout_enforce
 *** sysprefs_time_server_configure
